--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
  
 
-  <img src="./assets/images/dennis.png" height="200" alt="profile picture" />
+  <img src="./assets/images/Dennis.png" height="200" alt="profile picture" />
   <h1>Dennis's Resume</h1>
 
   <hr />
