--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <hr />
   <h3>Summary</h3>
   <p>On the road to learn new things always. Strive to be the best at what i do.</p>
-  <p>For more information about me feel free to look at my <a href="www.linkedin.com/in/dennislarsenit">Linkedin Page </a></p>
+  <p>For more information about me feel free to look at my <a href="https://www.linkedin.com/in/dennislarsenit">Linkedin Page </a></p>
   
   <br />
   <h3>Projects</h3>
