--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <li>FeT Teknik</li>
 	<p>System to manage customers in a webportal with integration to Otobo ticket system for listing tickets on the customer and to create new tickets. Also listing of invoiced from business central</p>
       <li>FE Dialer</li><p>Program to use copy paste function to dial out through a yealink, snom or softphone</p>
+      <li>Sales Dashboard</li><p>Sales dashboard to get all the sales information from oppertunitys and display these on a webpage showing numbers for week and year to date. Also showing call queues</p>
+      <li>Transciption of Audio</li><p>Made automate workflow that gets recording from voip platform, transcribe it and then send to CRM system</p>
     </ol>
   <h3>Education</h3>
   <ul>
