--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <br />
   <h3>Projects</h3>
     <ol>
+      <li>.Net Compiler for invoice files</li>
+	<p>Compiler in .Net to compile invoice files from different systems into a single format used in Business Central</p>
       <li>FeT Teknik</li>
 	<p>System to manage customers in a webportal with integration to Otobo ticket system for listing tickets on the customer and to create new tickets. Also listing of invoiced from business central</p>
       <li>FE Dialer</li><p>Program to use copy paste function to dial out through a yealink, snom or softphone</p>
